Update demo programs

--- a/Demos/BinaryStar.ipynb
+++ b/Demos/BinaryStar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
     "G = 6.7e-11\n",
     "\n",
     "giant = sphere(pos=vector(-1e11,0,0), radius=2e10, color=color.red, \n",
-    "                make_trail=True, trail_type='points', interval=10, retain=20)\n",
+    "                make_trail=True, trail_type='points', interval=10, retain=40)\n",
     "giant.mass = 2e30\n",
     "giant.p = vector(0, 0, -1e4) * giant.mass\n",
     "\n",
@@ -139,7 +139,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -154,14 +165,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
