--- a/Demos/Gyroscope-Suspended.ipynb
+++ b/Demos/Gyroscope-Suspended.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -115,7 +117,7 @@
     "scene.width = scene.height = 600\n",
     "scene.title = 'Hanging gyroscope'\n",
     "scene.background = color.white\n",
-    "scene.range = 1.6\n",
+    "scene.range = 1.5\n",
     "\n",
     "top = vector(0,1,0) # where top of spring is held\n",
     "ks = 100 # spring stiffness\n",
@@ -292,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -307,16 +311,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
