--- a/Demos/Plot3D.ipynb
+++ b/Demos/Plot3D.ipynb
@@ -222,7 +222,7 @@
     "scene.forward = vec(-0.7,-0.5,-1)\n",
     "\n",
     "while True:\n",
-    "    rate(30)\n",
+    "    rate(1000)\n",
     "    if run:\n",
     "        p.replot()\n",
     "        t += dt\n"
@@ -231,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -246,14 +248,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
