--- a/Demos/RotatingBoxes.ipynb
+++ b/Demos/RotatingBoxes.ipynb
@@ -109,6 +109,7 @@
     "N = 10\n",
     "\n",
     "scene.title = \"{} by {} by {} = {} rotating boxes\".format(N,N,N,N**3)\n",
+    "scene.append_to_title(\"\\nGPU performance: <scan id='fps'/>\")\n",
     "\n",
     "boxes = []\n",
     "\n",
@@ -155,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -170,14 +173,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
