--- a/Demos/RotatingPoints.ipynb
+++ b/Demos/RotatingPoints.ipynb
@@ -7,6 +7,30 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div id=\"glowscript\" class=\"glowscript\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "application/javascript": [
        "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
@@ -76,30 +100,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"glowscript\" class=\"glowscript\"></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -110,7 +110,7 @@
     "N = 15000\n",
     "scene.title = 'A {}-element points object with random radii and colors'.format(N)\n",
     "\n",
-    "run = True\n",
+    "run = False\n",
     "def Runbutton(b):\n",
     "    global run\n",
     "    if b.text == 'Pause':\n",
@@ -120,7 +120,7 @@
     "        run = True\n",
     "        b.text = 'Pause'\n",
     "\n",
-    "button(text='Pause', bind=Runbutton)\n",
+    "button(text='Run', bind=Runbutton)\n",
     "scene.append_to_caption(\"\"\"<br>Right button drag or Ctrl-drag to rotate \"camera\" to view scene.\n",
     "Middle button or Alt-drag to drag up or down to zoom in or out.\n",
     "  On a two-button mouse, middle is left + right.\n",
@@ -144,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -158,14 +160,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
