--- a/Demos/Gyroscope.ipynb
+++ b/Demos/Gyroscope.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -114,8 +114,15 @@
     "scene.width = 800\n",
     "scene.height = 600\n",
     "scene.range = 1.2\n",
-    "scene.title = \"A precessing, nutating gyroscope\"\n",
-    "\n",
+    "scene.title = \"A precessing, nutating gyroscope\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Lshaft = 1 # length of gyroscope shaft\n",
     "r = Lshaft/2 # distance from support to center of mass\n",
     "Rshaft = 0.03 # radius of gyroscope shaft\n",
@@ -140,7 +147,7 @@
     "gyro = compound([shaft, rotor, base, end])\n",
     "gyro_center = gyro.pos\n",
     "gyro.texture = textures.metal\n",
-    "tip = sphere(pos=shaft.axis, radius=shaft.radius/2,  make_trail=True, retain=250)\n",
+    "tip = sphere(pos=shaft.axis, radius=shaft.radius/2,  make_trail=True, retain=80)\n",
     "tip.trail_color = color.green\n",
     "tip.trail_radius = 0.15*Rshaft\n",
     "\n",
@@ -206,14 +213,26 @@
     "    gyro.pos = 0.5*Lshaft*A\n",
     "    tip.pos = Lshaft*A\n",
     "    t = t+dt*Nsteps\n",
-    "    \n",
-    "\n"
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tip.trail_color = color.yellow"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -228,14 +247,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
