--- a/Demos/Rug.ipynb
+++ b/Demos/Rug.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -171,8 +173,7 @@
     "y = -0.5-Lpulse-dy_pulse # bottom of pulse (starts below rug)\n",
     "while True:\n",
     "    rate(50)\n",
-    "    while not run:\n",
-    "        scene.waitfor('redraw')\n",
+    "    if not run: continue\n",
     "    y += dy_pulse\n",
     "    if y+Lpulse <= -0.5:\n",
     "        continue\n",
@@ -211,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -225,16 +228,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
