Add time import to stonehenge demos

--- a/Demos/Stonehenge.ipynb
+++ b/Demos/Stonehenge.ipynb
@@ -33,6 +33,8 @@
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "from vpython import *\n",
     "scene = canvas() # This is needed in Jupyter notebook and lab to make programs easily rerunnable\n",
     "import time\n",
